# oxeygen

./: .gitignore  404.html  Cargo.toml  README.md  _index-a384294d2fc58ddc.css  gen-web-15186c6dbe7d19d4f01738d98be7012761f9e0ecc9860710d2a71a2a69d6f060c8cc7780f25c18df3cbd554dae7146a6.js  gen-web-15186c6dbe7d19d4f01738d98be7012761f9e0ecc9860710d2a71a2a69d6f060c8cc7780f25c18df3cbd554dae7146a6_bg.wasm  gen-web-2d0e8b30218d12820c6e408e4da5cbf25b353748a71ca25824eb95134e699e6e9cade83f7c230c17f5b9954c4fe783ff.js  gen-web-2d0e8b30218d12820c6e408e4da5cbf25b353748a71ca25824eb95134e699e6e9cade83f7c230c17f5b9954c4fe783ff_bg.wasm  gen-web-2f47e4997d377c7ae9c1b8cc50ef92e8194772ae1a34c3ef9869c4e98b3ad9923ed14056d076445939eed1c4cc617c26.js  gen-web-2f47e4997d377c7ae9c1b8cc50ef92e8194772ae1a34c3ef9869c4e98b3ad9923ed14056d076445939eed1c4cc617c26_bg.wasm  gen-web-3c324da149b2584935eda293e30f15ea5a480386222414618871203a388c99b7bd58a982748e42568f1aa5a03a893cb7.js  gen-web-3c324da149b2584935eda293e30f15ea5a480386222414618871203a388c99b7bd58a982748e42568f1aa5a03a893cb7_bg.wasm  gen-web-741458e5db850a1ba8f2a2c0deec4d77a555dd2adc1e145cd80a4c7ec754cd2bc88a5a3b55ecd1e69b5fe08cc86731fd.js  gen-web-741458e5db850a1ba8f2a2c0deec4d77a555dd2adc1e145cd80a4c7ec754cd2bc88a5a3b55ecd1e69b5fe08cc86731fd_bg.wasm  gen-web-8937e78411c33528d5f67adba5339deddc2d567ba4b45315dd9c42b269d2d70e8cf38ffec7017df48221d1932f384c7f.js  gen-web-8937e78411c33528d5f67adba5339deddc2d567ba4b45315dd9c42b269d2d70e8cf38ffec7017df48221d1932f384c7f_bg.wasm  gen-web-b5316a416edca4dda866363ff4d620707a0b6d12830e750d20cb1f5f5b89bd17b1942109b8b9e48e5579043266a452e6.js  gen-web-b5316a416edca4dda866363ff4d620707a0b6d12830e750d20cb1f5f5b89bd17b1942109b8b9e48e5579043266a452e6_bg.wasm  gen-web-b6cb791e901b76e7152147e33696647830fc94466e7b68970d342b85fa8bdb97c7ecde028162bbb70abbb833c8a03ccc.js  gen-web-b6cb791e901b76e7152147e33696647830fc94466e7b68970d342b85fa8bdb97c7ecde028162bbb70abbb833c8a03ccc_bg.wasm  gen-web-bb33773966e17c912631fa5c8c36d9b1ebef72ef3d6d1487cfcf0a17f8e38d6ad3b18de69d9524993914c2de18166f96.js  gen-web-bb33773966e17c912631fa5c8c36d9b1ebef72ef3d6d1487cfcf0a17f8e38d6ad3b18de69d9524993914c2de18166f96_bg.wasm  gen-web-cf927d8b31c5860231a2113234685693ffe7bcaee84770b046e18088f2603f10dadb0942536d0ca71fd57dfbaee7f091.js  gen-web-cf927d8b31c5860231a2113234685693ffe7bcaee84770b046e18088f2603f10dadb0942536d0ca71fd57dfbaee7f091_bg.wasm  gen-web-f77049d5b2dacba9.js  gen-web-fc526238cc10ed56f68947ab79b47de064e4b1f91edaf49813789595125eec27c80d47dfedf853af1a7b3ea7ab87ed92.js  gen-web-fc526238cc10ed56f68947ab79b47de064e4b1f91edaf49813789595125eec27c80d47dfedf853af1a7b3ea7ab87ed92_bg.wasm  index.html
.github/workflows/: gh-pages.yml
assets/dioxus/: Oxeygen.js  Oxeygen_bg.wasm
assets/dioxus/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
data/: akl.json  bokmal.json  monkeyracer.json  shai.json
gen-anneal/: Cargo.toml
gen-anneal/src/: lib.rs
gen-cli/: Cargo.toml
gen-cli/src/: lib.rs
gen-core/: Cargo.toml  trigrams.txt  weights.toml
gen-core/src/: corpus.rs  corpus_refiner.rs  data.rs  keyboard.rs  keyboard_types.rs  layout.rs  layout2.rs  layout_types.rs  lib.rs  mapping.rs  optimizer.rs  prelude.rs  stuff.rs  trigram_types.rs  weights.rs
gen-core/src copy/: corpus_refiner.rs  keyboard_types.rs  lib.rs  stats.rs  trigram_types.rs  trigrams.rs  weights.rs
gen-generate/: Cargo.toml
gen-generate/src/: corpus.rs  lib.rs  weights.rs
gen-generate/src copy/: corpus.rs  data.rs  keyboard.rs  layout.rs
gen-web/: Cargo.toml  Dioxus.toml  index.html
gen-web/css/: app.module.css  bundle.scss  keyboard_ansi.css  keyboard_ansi.module.css  keyboard_colstag.module.css  keyboard_iso.css  keyboard_iso.module.css  keyboard_ortho.css  keyboard_ortho.module.css
gen-web/public/: index.scss
gen-web/public/data/: thing.json
gen-web/public/stylance/: _index.scss  keyboard_ansi.module-db3ccea.css  keyboard_colstag.module-4e20831.css  keyboard_iso.module-fccd2fa.css  keyboard_ortho.module-632792e.css
gen-web/src/: keyboard.rs  keyboard_ansi.rs  keyboard_colstag.rs  keyboard_iso.rs  keyboard_ortho.rs  lib.rs  main.rs
