cargo-features = ["profile-rustflags"]

[profile.release]
opt-level = 3
lto = "fat"
rustflags = ["-Z", "share-generics=y"]

[package]
name = "oxeygen"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "gen-core",
    "gen-cli",
    "gen-web",
]

[dependencies]
gen-core = { path = "./gen-core" }
gen-cli = { path = "./gen-cli" }
gen-web = { path = "./gen-web" }

[[bin]]
name = "gen-cli"
path = "./gen-cli/src/bin/main.rs"
