[profile.release]
opt-level = 3
lto = "fat"

[package]
name = "oxeygen"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "gen-anneal",
    "gen-core",
    "gen-cli",
    "gen-generate",
    "gen-web",
]

[dependencies]
gen-core = { path = "./gen-core" }
gen-cli = { path = "./gen-cli" }
gen-generate = { path = "./gen-generate" }
gen-web = { path = "./gen-web" }

[[bin]]
name = "gen-cli"
path = "./gen-cli/src/bin/main.rs"
