[package]
name = "gen-core"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "2.2.3", features = ["serde"] }
itertools = "0.12.1"
libdof = "0.14.12"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
serde_with = { version = "3.6.1", features = ["indexmap_2"] }
nanorand = { version = "0.7.0", features = ["getrandom"] }
file-chunker = "0.1.1"
fxhash = "0.2.1"
sliding_window_alt = "0.1.2"
thiserror = "1.0.57"
rayon = "1.8.1"
serde_json = "1.0.114"
num_cpus = "1.16.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.5.0" }

[dev-dependencies]
assert_approx_eq = "1.1.0"
time_this = "0.2.5"
